--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,7 +7,7 @@ volumes:
 services:
   # Starts up a postgres database
   postgres:
-    image: postgres
+    image: postgres:16
     restart: always
     volumes:
       - pg_comp_ai_volume:/var/lib/postgresql/data
