Lower ram requirements by loosing weight, outsourcing embedding model and chroma db. Reranker is now optional. instructor-large is not available anymore. External chromadb can now be populated or repopulated at runtime based on jsonl files in data/import directory containing a documents string and metadata object and optional precomputed embeddings array

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,29 @@
-OPENAI_API_KEY=myoptional-openaiapikey
-MISTRAL_API_KEY=myoptional-mistralapikey
-HOST_IP_ADDRESS=127.0.0.1
-POSTGRES_PASSWORD=mypostgresdbpassword
-PGADMIN_EMAIL=mypgadminemail
-PGADMIN_PASSWORD=mypgadminpassword
-HOST_PORT=80
-POSTGRES_PORT=5432
-PGADMIN_PORT=5050
+# Wisyki API
 ROOT_PATH=/
-DEFAULT_CUSTOM_LLM_URL=https://my.custom.api.endpoint.com/v1/chat/completions
-LARGE_CUSTOM_LLM_URL=https://my.custom.api.endpoint.com/v1/chat/completions
+
+# Admin API Key (optional, required for /admin endpoints)
+# If not set, admin endpoints are disabled
+# ADMIN_API_KEY=your-secret-admin-key
+
+# LLM
+LLM_API_URL=https://chat-ai.academiccloud.de/v1
+LLM_MODEL=gemma-3-27b-it
+LLM_API_KEY=xxx
+
+# Database
+DB_HOST=postgres
+DB_PORT=5432
+DB_DATABASE=wisyki-skills
+DB_USERNAME=root
+DB_PASSWORD=my_secure_db_password
+
+# Chroma
+CHROMA_HOST=chroma
+CHROMA_PORT=8000
+CHROMA_COLLECTION=wisyki-skills
+CHROMA_TENANT=default_tenant
+CHROMA_SERVER_AUTHN_CREDENTIALS=secret-token
+
+# HuggingFace Embedding API
+HF_EMBEDDING_HOST=https://hf-text-inf.dev.dlc.sh
+HF_EMBEDDING_API_KEY=xxx
