--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,7 +8,7 @@ WORKDIR /code
 
 # Install requirements
 COPY requirements.txt .
-RUN pip install pip --upgrade && pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
